<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/maps"
        android:icon="@drawable/baseline_image_24"
        android:title="@string/maps"
        android:contentDescription="@string/button_maps"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting"
        android:contentDescription="@string/tmbl_setting"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        android:contentDescription="@string/tmbl_logout"
        app:showAsAction="collapseActionView"/>
</menu>