<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.camera.CameraActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <ImageView
            android:id="@+id/imageCamera"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_image_24"/>

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/brown"
            android:contentDescription="@string/button_camera"
            android:text="@string/camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonGallery"
            app:layout_constraintTop_toBottomOf="@+id/imageCamera" />

        <Button
            android:id="@+id/buttonGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:elevation="2dp"
            android:contentDescription="@string/button_gallery"
            android:backgroundTint="@color/brown"
            android:text="@string/Gallery"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCamera"
            app:layout_constraintEnd_toStartOf="@+id/buttonCamera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/buttonCamera"/>

        <Button
            android:id="@+id/buttonCamerax"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:elevation="2dp"
            android:text="@string/cameraX"
            app:layout_constraintTop_toBottomOf="@id/buttonGallery"
            app:layout_constraintBottom_toTopOf="@id/textField"
            android:layout_width="match_parent"
            android:backgroundTint="@color/brown"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/buttonCamerax">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editDeskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="7"
                android:textColor="@color/brown"
                android:gravity="top|start"
                android:hint="@string/description"/>
            </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonUpload"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:elevation="2dp"
            android:text="@string/upload"
            app:layout_constraintTop_toBottomOf="@id/textField"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/brown"
            android:layout_height="wrap_content"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>