<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".view.splash.SplashActivity">

    <ImageView
        android:id="@+id/logoMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/kucing1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"/>
    <TextView
        android:id="@+id/titleMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/title_menu1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu1"
        app:layout_constraintStart_toStartOf="@id/logoMenu1"
        app:layout_constraintTop_toBottomOf="@id/logoMenu1"/>
    <TextView
        android:id="@+id/descMenu1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:text="@string/desc_menu1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/titleMenu1"
        app:layout_constraintStart_toStartOf="@id/titleMenu1"
        app:layout_constraintTop_toBottomOf="@id/titleMenu1"/>

    <ImageView
        android:id="@+id/logoMenu2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:src="@drawable/kucing2" />

    <TextView
        android:id="@+id/titleMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logoMenu2"
        app:layout_constraintStart_toStartOf="@+id/logoMenu2"
        app:layout_constraintTop_toBottomOf="@+id/logoMenu2"
        android:text="@string/title_menu2" />

    <TextView
        android:id="@+id/descMenu2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/titleMenu2"
        app:layout_constraintStart_toStartOf="@+id/titleMenu2"
        app:layout_constraintTop_toBottomOf="@+id/titleMenu2"
        android:text="@string/desc_menu2" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:altSrc="@drawable/paw_full"
        android:layout_marginStart="155dp"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/paw"
        app:tint="@color/beige" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="35dp"
        app:altSrc="@drawable/paw_full"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/paw"
        app:tint="@color/beige"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:alpha="0"
        android:backgroundTint="@color/black"
        android:text="@string/acces_now"
        app:layout_constraintBottom_toTopOf="@+id/menu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"/>

</androidx.constraintlayout.motion.widget.MotionLayout>